# ir_coursework

./: .gitignore  README.md  args_parse.py  config.py  data.pkl  dictionary.txt  main.py  metadata.json  pyproject.toml  requirements.txt  resources.py  utils.py  videogame-labels.csv
flyer/: IR_flyer.doc  IR_flyer_template(1).docx
parser/: parser.py  reader.py  types.py
search/: ranking.py  search.py  tf_idf.py  types.py
